# crewai-snippet

./: LICENSE  pyproject.toml
src/: main.py
